<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>com.janboerman.invsee</groupId>
        <artifactId>invsee-plus-plus</artifactId>
        <version>0.31.16-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>invsee-plus-plus_plugin</artifactId>
    <name>InvSee++ Plugin (Folia fork, 1.21.11)</name>

    <properties>
        <maven.deploy.skip>false</maven.deploy.skip>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <finalName>InvSee++</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade-plugin.version}</version>

                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>com.janboerman.invsee.bstats</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>

                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>

                            <artifactSet>
                                <excludes>
                                    <exclude>junit:junit</exclude>
                                    <exclude>org.hamcrest:hamcrest-core</exclude>
                                    <exclude>com.googlecode.json-simple:json-simple</exclude>
                                </excludes>
                            </artifactSet>

                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Multi-Release>true</Multi-Release>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>${junit.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- second-party minecraft libraries-->
        <dependency>
            <groupId>dev.folia</groupId>
            <artifactId>folia-api</artifactId>
            <version>1.19.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- third-party minecraft libraries -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>
        <!-- This is a bit of an odd one: FastStats is vendored in our sources.
             We may use its own maven dependency in the future whenever Java 8 support is implemented. -->
        <dependency>
            <groupId>com.janboerman.invsee</groupId>
            <artifactId>faststats</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- first-party libraries -->
        <dependency>
            <groupId>com.janboerman.invsee</groupId>
            <artifactId>invsee-plus-plus_common</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.janboerman.invsee</groupId>
            <artifactId>mojang-api</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.janboerman.invsee</groupId>
            <artifactId>utils</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- implementations -->
        <dependency>
            <groupId>com.janboerman.invsee</groupId>
            <artifactId>impl_paper_1_21_11</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>com.janboerman.invsee</groupId>-->
<!--            <artifactId>invsee-plus-plus_multiverse-inventories</artifactId>-->
<!--            <version>${project.version}</version>-->
<!--            <scope>compile</scope>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.janboerman.invsee</groupId>
            <artifactId>invsee-plus-plus_per-world-inventory</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>